--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
   <body>
 <div class="container-fluid">
@@ -41,16 +42,17 @@
 		<div class="col-md-12">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Navbar <i class="bi bi-fingerprint"></i></a>
+                  <a class="navbar-brand" href="#">Walletbor <i class="bi bi-wallet-fill"></i></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                       <a class="nav-link active" aria-current="page" href="#">Home</a>
-                      <a class="nav-link" href="#">Features</a>
-                      <a class="nav-link" href="#">Pricing</a>
-                      <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                      <a class="nav-link" href="study.html">MyStudy</a>
+                      <a class="nav-link" href="gallery.html">Gallery</a>
+                      <a class="nav-link" href="datatables.html">Datatable</a>
+                      <a class="nav-link" href="login.html">Login</a>
                     </div>
                   </div>
                 </div>
@@ -59,19 +61,83 @@
 	</div>
 
     <!-- content -->
-	<div class="row">
-        <!-- sub content -->
-		<div class="col-md-4">
-		</div>
+<div class="row">
+    <!-- sub content -->
+    <div class="col-md-4">
+        <h5>Referensi Eksternal</h5>
+        <ul class="list-group">
+            <li class="list-group-item">
+                <a href="https://nfacademy.id" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> NF Academy
+                </a>
+            </li>
+            <li class="list-group-item">
+                <a href="https://nurulfikri.ac.id" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> Nurul Fikri
+                </a>
+            </li>
+            <li class="list-group-item">
+                <a href="https://www.udemy.com" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> Udemy
+                </a>
+            </li>
+            <li class="list-group-item">
+                <a href="https://www.w3schools.com" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> W3Schools
+                </a>
+            </li>
+            <li class="list-group-item">
+                <a href="https://developer.mozilla.org" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> MDN Web Docs
+                </a>
+            </li>
+        </ul>
+    </div>
 
-        <!-- main content -->
-		<div class="col-md-8">
-		</div>
-	</div>
+    <!-- main content -->
+    <div class="col-md-8">
+        <h5>Profile</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, repellendus! Magnam nam quam hic harum quo itaque consequatur soluta voluptatibus adipisci, molestiae aut odit culpa vitae amet minima repellat fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo mollitia dolor sapiente similique! Ad tenetur ea laboriosam sunt ab temporibus aliquam fugiat. Libero hic voluptate repellat, sequi autem nemo fugit.</p>
+        <!-- accordion -->
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Accordion Item #1
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error cupiditate tenetur nemo unde repellendus, ratione quas eligendi quia dolore? Nam, hic! Sit culpa quis error! Voluptates mollitia excepturi vel ad! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, voluptates magni possimus corrupti nobis, dignissimos reiciendis minima autem dicta cum officia magnam temporibus illum odit error quidem expedita esse voluptate. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo placeat minus mollitia praesentium autem, quod hic, aut atque dicta possimus, vitae at aliquam dolorem perspiciatis iusto voluptate neque similique corporis?</div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                Accordion Item #2
+              </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus impedit laboriosam cupiditate vitae saepe provident nesciunt sequi eius culpa optio earum praesentium inventore, necessitatibus ad minima magnam assumenda, dolorum dolores! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur hic expedita sunt obcaecati quibusdam esse eius, ea accusantium nostrum porro odit ipsam adipisci est deserunt molestias commodi! Tempora, ipsam autem.t amet consectetur adipisicing elit. Perferendis, voluptates magni possimus corrupti nobis, dignissimos reiciendis minima autem dicta cum officia magnam temporibus illum odit error quidem expedita esse voluptate. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo placeat minus mollitia praesentium autem, quod hic, aut atque dicta possimus, vitae at aliquam dolorem perspiciatis iusto voluptate neque similique corporis?</div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                Accordion Item #3
+              </button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam neque minima officiis id, explicabo culpa laborum incidunt repellat quisquam illo ut delectus, possimus omnis. Nulla distinctio unde dolores ipsum esse?t amet consectetur adipisicing elit. Perferendis, voluptates magni possimus corrupti nobis, dignissimos reiciendis minima autem dicta cum officia magnam temporibus illum odit error quidem expedita esse voluptate. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo placeat minus mollitia praesentium autem, quod hic, aut atque dicta possimus, vitae at aliquam dolorem perspiciatis iusto voluptate neque similique corporis?t amet consectetur adipisicing elit. Perferendis, voluptates magni possimus corrupti nobis, dignissimos reiciendis minima autem dicta cum officia magnam temporibus illum odit error quidem expedita esse voluptate. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo placeat minus mollitia praesentium autem, quod hic, aut atque dicta possimus, vitae at aliquam dolorem perspiciatis iusto voluptate neque similique corporis?</div>
+            </div>
+          </div>
+        </div>
+    </div>
+</div>
 
     <!-- footer -->
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-md-12 bg-dark text-white text-center p-1">
+            <p>&copy; 2025 Muhammad Farhan <a href="https://www.linkedin.com/" target="_blank"><i class="bi bi-linkedin"></i></a> <a href="https://github.com/kerlily/SIB-BOOTSTRAP"  target="_blank"><i class="bi bi-github"></i></a></p> 
 		</div>
 	</div>
 </div>
