--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
     <!-- main content -->
     <div class="col-md-8">
         <h5>Profile</h5>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, repellendus! Magnam nam quam hic harum quo itaque consequatur soluta voluptatibus adipisci, molestiae aut odit culpa vitae amet minima repellat fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo mollitia dolor sapiente similique! Ad tenetur ea laboriosam sunt ab temporibus aliquam fugiat. Libero hic voluptate repellat, sequi autem nemo fugit.</p>
+        <p> I am an enthusiastic undergraduate student majoring in Informatics Engineering at Widya Pratama Institute. 
+          Known for my creativity and adaptability, I thrive in dynamic environments and enjoy exploring new challenges 
+          and opportunities. My skillset spans both creative and technical fields. I am constantly seeking opportunities 
+          to grow, learn, and contribute to innovative projects..</p>
         <!-- accordion -->
         <div class="accordion accordion-flush" id="accordionFlushExample">
           <div class="accordion-item">
