--- a/gallery.html
+++ b/gallery.html
@@ -61,38 +61,38 @@
 	</div>
 
     <!-- content -->
-<div class="row">
-    <!-- sub content -->
-    <div class="col-md-4">
-        <h5>Referensi Eksternal</h5>
-        <ul class="list-group">
-            <li class="list-group-item">
-                <a href="https://nfacademy.id" target="_blank">
-                    <i class="fas fa-external-link-alt"></i> NF Academy
-                </a>
-            </li>
-            <li class="list-group-item">
-                <a href="https://nurulfikri.ac.id" target="_blank">
-                    <i class="fas fa-external-link-alt"></i> Nurul Fikri
-                </a>
-            </li>
-            <li class="list-group-item">
-                <a href="https://www.udemy.com" target="_blank">
-                    <i class="fas fa-external-link-alt"></i> Udemy
-                </a>
-            </li>
-            <li class="list-group-item">
-                <a href="https://www.w3schools.com" target="_blank">
-                    <i class="fas fa-external-link-alt"></i> W3Schools
-                </a>
-            </li>
-            <li class="list-group-item">
-                <a href="https://developer.mozilla.org" target="_blank">
-                    <i class="fas fa-external-link-alt"></i> MDN Web Docs
-                </a>
-            </li>
-        </ul>
-    </div>
+    <div class="row">
+      <!-- sub content -->
+      <div class="col-md-4">
+          <h5>Referensi Eksternal</h5>
+          <ul class="list-group">
+              <li class="list-group-item">
+                  <a href="https://nfacademy.id" target="_blank">
+                      <i class="fas fa-external-link-alt"></i> NF Academy
+                  </a>
+              </li>
+              <li class="list-group-item">
+                  <a href="https://nurulfikri.ac.id" target="_blank">
+                      <i class="fas fa-external-link-alt"></i> Nurul Fikri
+                  </a>
+              </li>
+              <li class="list-group-item">
+                  <a href="https://getbootstrap.com/" target="_blank">
+                      <i class="fas fa-external-link-alt"></i> Bootstrap
+                  </a>
+              </li>
+              <li class="list-group-item">
+                  <a href="https://www.w3schools.com" target="_blank">
+                      <i class="fas fa-external-link-alt"></i> W3Schools
+                  </a>
+              </li>
+              <li class="list-group-item">
+                  <a href="https://iwima.ac.id/" target="_blank">
+                      <i class="fas fa-external-link-alt"></i> IWIMA
+                  </a>
+              </li>
+          </ul>
+      </div>
 
     <!-- main content -->
     <div class="col-md-8">
