--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="https://www.udemy.com" target="_blank">
-                    <i class="fas fa-external-link-alt"></i> Udemy
+                <a href="https://getbootstrap.com/" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> Bootstrap
                 </a>
             </li>
             <li class="list-group-item">
@@ -87,8 +87,8 @@
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="https://developer.mozilla.org" target="_blank">
-                    <i class="fas fa-external-link-alt"></i> MDN Web Docs
+                <a href="https://iwima.ac.id/" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> IWIMA
                 </a>
             </li>
         </ul>
@@ -97,7 +97,7 @@
     <!-- main content -->
     <div class="col-md-8">
         <h5>Profile</h5>
-        <p> I am an enthusiastic undergraduate student majoring in Informatics Engineering at Widya Pratama Institute. 
+        <p>Hello, my name is Farhan. I am an enthusiastic undergraduate student majoring in Informatics Engineering at Widya Pratama Institute. 
           Known for my creativity and adaptability, I thrive in dynamic environments and enjoy exploring new challenges 
           and opportunities. My skillset spans both creative and technical fields. I am constantly seeking opportunities 
           to grow, learn, and contribute to innovative projects..</p>
